font changed without running linting which seems to break stuff in theme.liquid

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -45,13 +45,22 @@
       {{ body_font_bold_italic | font_face: font_display: 'swap' }}
       {{ settings.type_header_font | font_face: font_display: 'swap' }}
 
+      /* Custom font added to kinda-dawn */
+    
+      @font-face {
+        font-family: "Cera Pro Regular";
+        src: url("../assets/cera-pro-regular.otf") format("opentype"), url("../assets/cera-pro-regular.otf") format("opentype");
+      }
+      
+    /* end custom font */
+
       :root {
-        --font-body-family: {{ settings.type_body_font.family }}, {{ settings.type_body_font.fallback_families }};
+        --font-body-family: Cera Pro Regular, {{ settings.type_body_font.family }}, {{ settings.type_body_font.fallback_families }};
         --font-body-style: {{ settings.type_body_font.style }};
         --font-body-weight: {{ settings.type_body_font.weight }};
         --font-body-weight-bold: {{ settings.type_body_font.weight | plus: 300 | at_most: 1000 }};
 
-        --font-heading-family: {{ settings.type_header_font.family }}, {{ settings.type_header_font.fallback_families }};
+        --font-heading-family: Cera Pro Regular, {{ settings.type_header_font.family }}, {{ settings.type_header_font.fallback_families }};
         --font-heading-style: {{ settings.type_header_font.style }};
         --font-heading-weight: {{ settings.type_header_font.weight }};
 
