additional color variables added. Gingerly updated in theme.liquid

--- a/assets/base.css
+++ b/assets/base.css
@@ -13,6 +13,12 @@
   --gradient-background: var(--gradient-base-background-2);
 }
 
+.color-background-3 {
+  --color-foreground: var(--color-base-text);
+  --color-background: var(--color-base-background-3);
+  --gradient-background: var(--gradient-base-background-3);
+}
+
 .color-inverse {
   --color-foreground: var(--color-base-background-1);
   --color-background: var(--color-base-text);
@@ -31,6 +37,12 @@
   --gradient-background: var(--gradient-base-accent-2);
 }
 
+.color-accent-3 {
+  --color-foreground: var(--color-base-solid-button-labels);
+  --color-background: var(--color-base-accent-3);
+  --gradient-background: var(--gradient-base-accent-3);
+}
+
 .color-foreground-outline-button {
   --color-foreground: var(--color-base-outline-button-labels);
 }
@@ -43,6 +55,10 @@
   --color-foreground: var(--color-base-accent-2);
 }
 
+.color-foreground-accent-3 {
+  --color-foreground: var(--color-base-accent-3);
+}
+
 :root,
 .color-background-1 {
   --color-link: var(--color-base-outline-button-labels);
@@ -52,7 +68,9 @@
 .color-background-2,
 .color-inverse,
 .color-accent-1,
-.color-accent-2 {
+.color-accent-2,
+.color-accent-3
+ {
   --color-link: var(--color-foreground);
   --alpha-link: 0.7;
 }
@@ -68,7 +86,8 @@
 .color-background-2,
 .color-inverse,
 .color-accent-1,
-.color-accent-2 {
+.color-accent-2,
+.color-accent-3 {
   --color-button: var(--color-foreground);
   --color-button-text: var(--color-background);
 }
@@ -82,7 +101,8 @@
 
 .color-background-2 .button--secondary,
 .color-accent-1 .button--secondary,
-.color-accent-2 .button--secondary {
+.color-accent-2 .button--secondary,
+.color-accent-3 .button--secondary {
   --color-button: var(--color-background);
   --color-button-text: var(--color-foreground);
 }
@@ -102,7 +122,8 @@
 .color-background-2 .button--tertiary,
 .color-inverse .button--tertiary,
 .color-accent-1 .button--tertiary,
-.color-accent-2 .button--tertiary {
+.color-accent-2 .button--tertiary,
+.color-accent-3 .button--tertiary  {
   --color-button: var(--color-foreground);
   --color-button-text: var(--color-foreground);
 }
@@ -117,7 +138,8 @@
 .color-background-2,
 .color-inverse,
 .color-accent-1,
-.color-accent-2 {
+.color-accent-2,
+.color-accent-3  {
   --color-badge-background: var(--color-background);
   --color-badge-border: var(--color-background);
   --alpha-badge-border: 1;
@@ -125,7 +147,8 @@
 
 :root,
 .color-background-1,
-.color-background-2 {
+.color-background-2,
+.color-background-3 {
   --color-card-hover: var(--color-base-text);
 }
 
@@ -134,7 +157,8 @@
 }
 
 .color-accent-1,
-.color-accent-2 {
+.color-accent-2,
+.color-accent-3  {
   --color-card-hover: var(--color-base-solid-button-labels);
 }
 
@@ -149,6 +173,10 @@
 
 .color-icon-accent-2 {
   --color-icon: rgb(var(--color-base-accent-2));
+}
+
+.color-icon-accent-3 {
+  --color-icon: rgb(var(--color-base-accent-3));
 }
 
 .color-icon-outline-button {
@@ -312,9 +340,11 @@ html.no-js .no-js-hidden {
 body,
 .color-background-1,
 .color-background-2,
+.color-background-3,
 .color-inverse,
 .color-accent-1,
-.color-accent-2 {
+.color-accent-2,
+.color-accent-3 {
   color: rgba(var(--color-foreground), 0.75);
   background-color: rgb(var(--color-background));
 }
