--- a/assets/section-kinda-image-banner.css
+++ b/assets/section-kinda-image-banner.css
@@ -1,29 +1,29 @@
-.banner {
+.kinda-banner {
     display: flex;
     position: relative;
     flex-direction: column;
   }
   
-  .banner__box {
+  .kinda-banner__box {
     text-align: center;
   }
   
   @media only screen and (max-width: 749px) {
-    .banner--content-align-mobile-right .banner__box {
+    .kinda-banner--content-align-mobile-right .kinda-banner__box {
       text-align: right;
     }
   
-    .banner--content-align-mobile-left .banner__box {
+    .kinda-banner--content-align-mobile-left .kinda-banner__box {
       text-align: left;
     }
   }
   
   @media only screen and (min-width: 750px) {
-    .banner--content-align-right .banner__box {
+    .kinda-banner--content-align-right .kinda-banner__box {
       text-align: right;
     }
   
-    .banner--content-align-left .banner__box {
+    .kinda-banner--content-align-left .kinda-banner__box {
       text-align: left;
     }
   }
@@ -31,145 +31,144 @@
 /* Added media query for mid width stylings - large*/
   @media only screen and (min-width: 1000px) {
   
-    .banner--content-align-left.banner--desktop-transparent .banner__box,
-    .banner--content-align-right.banner--desktop-transparent .banner__box,
-    .banner--medium.banner--desktop-transparent .banner__box {
-      max-width: 55rem;
-      /* background-color: red; */
+    .kinda-banner--content-align-left.kinda-banner--desktop-transparent .kinda-banner__box,
+    .kinda-banner--content-align-right.kinda-banner--desktop-transparent .kinda-banner__box,
+    .kinda-banner--medium.kinda-banner--desktop-transparent .kinda-banner__box {
+      max-width: 53rem;
     }
   }
 
   /* medium */
-  @media only screen and (min-width: 750px) and (max-width:999px) {
-    .banner--content-align-left.banner--desktop-transparent .banner__box,
-    .banner--content-align-right.banner--desktop-transparent .banner__box,
-    .banner--medium.banner--desktop-transparent .banner__box {
+  @media only screen and (min-width: 800px) and (max-width:999px) {
+    .kinda-banner--content-align-left.kinda-banner--desktop-transparent .kinda-banner__box,
+    .kinda-banner--content-align-right.kinda-banner--desktop-transparent .kinda-banner__box,
+    .kinda-banner--medium.kinda-banner--desktop-transparent .kinda-banner__box {
       max-width: 25rem;
-      /* background-color: yellow; */
+      background-color: yellow;
 
     }
   }
 
     /* small */
     @media only screen and (max-width:749) {
-        .banner--content-align-left.banner--desktop-transparent .banner__box,
-        .banner--content-align-right.banner--desktop-transparent .banner__box,
-        .banner--medium.banner--desktop-transparent .banner__box {
+        .kinda-banner--content-align-left.kinda-banner--desktop-transparent .kinda-banner__box,
+        .kinda-banner--content-align-right.kinda-banner--desktop-transparent .kinda-banner__box,
+        .kinda-banner--medium.kinda-banner--desktop-transparent .kinda-banner__box {
           max-width: 25rem;
-          /* background-color: green; */
+          background-color: green;
     
         }
       }
 
   @media screen and (max-width: 749px) {
-    .banner--small.banner--mobile-bottom:not(.banner--adapt) .banner__media,
-    .banner--small.banner--stacked:not(.banner--mobile-bottom):not(.banner--adapt) > .banner__media {
+    .kinda-banner--small.kinda-banner--mobile-bottom:not(.kinda-banner--adapt) .kinda-banner__media,
+    .kinda-banner--small.kinda-banner--stacked:not(.kinda-banner--mobile-bottom):not(.kinda-banner--adapt) > .kinda-banner__media {
       height: 18rem;
 
     }
   
-    .banner--medium.banner--mobile-bottom:not(.banner--adapt) .banner__media,
-    .banner--medium.banner--stacked:not(.banner--mobile-bottom):not(.banner--adapt) > .banner__media {
+    .kinda-banner--medium.kinda-banner--mobile-bottom:not(.kinda-banner--adapt) .kinda-banner__media,
+    .kinda-banner--medium.kinda-banner--stacked:not(.kinda-banner--mobile-bottom):not(.kinda-banner--adapt) > .kinda-banner__media {
       height: 34rem;
     }
   
-    .banner--large.banner--mobile-bottom:not(.banner--adapt) .banner__media,
-    .banner--large.banner--stacked:not(.banner--mobile-bottom):not(.banner--adapt) > .banner__media {
+    .kinda-banner--large.kinda-banner--mobile-bottom:not(.kinda-banner--adapt) .kinda-banner__media,
+    .kinda-banner--large.kinda-banner--stacked:not(.kinda-banner--mobile-bottom):not(.kinda-banner--adapt) > .kinda-banner__media {
       height: 39rem;
     }
   
-    .banner--small:not(.banner--mobile-bottom):not(.banner--adapt) .banner__content {
+    .kinda-banner--small:not(.kinda-banner--mobile-bottom):not(.kinda-banner--adapt) .kinda-banner__content {
       min-height: 28rem;
     }
   
-    .banner--medium:not(.banner--mobile-bottom):not(.banner--adapt) .banner__content {
+    .kinda-banner--medium:not(.kinda-banner--mobile-bottom):not(.kinda-banner--adapt) .kinda-banner__content {
       min-height: 34rem;
     }
   
-    .banner--large:not(.banner--mobile-bottom):not(.banner--adapt) .banner__content {
+    .kinda-banner--large:not(.kinda-banner--mobile-bottom):not(.kinda-banner--adapt) .kinda-banner__content {
       min-height: 39rem;
     }
   }
   
   @media screen and (min-width: 750px) {
-    .banner {
+    .kinda-banner {
       flex-direction: row;
     }
   
-    .banner--small:not(.banner--adapt) {
+    .kinda-banner--small:not(.kinda-banner--adapt) {
       min-height: 42rem;
     }
   
-    .banner--medium:not(.banner--adapt) {
+    .kinda-banner--medium:not(.kinda-banner--adapt) {
       min-height: 56rem;
     }
   
-    .banner--large:not(.banner--adapt) {
+    .kinda-banner--large:not(.kinda-banner--adapt) {
       min-height: 72rem;
     }
   
-    .banner__content.banner__content--top-left {
+    .kinda-banner__content.kinda-banner__content--top-left {
       align-items: flex-start;
       justify-content: flex-start;
     }
   
-    .banner__content.banner__content--top-center {
+    .kinda-banner__content.kinda-banner__content--top-center {
       align-items: flex-start;
       justify-content: center;
     }
   
-    .banner__content.banner__content--top-right {
+    .kinda-banner__content.kinda-banner__content--top-right {
       align-items: flex-start;
       justify-content: flex-end;
     }
   
-    .banner__content.banner__content--middle-left {
+    .kinda-banner__content.kinda-banner__content--middle-left {
       align-items: center;
       justify-content: flex-start;
     }
   
-    .banner__content.banner__content--middle-center {
+    .kinda-banner__content.kinda-banner__content--middle-center {
       align-items: center;
       justify-content: center;
     }
   
-    .banner__content.banner__content--middle-right {
+    .kinda-banner__content.kinda-banner__content--middle-right {
       align-items: center;
       justify-content: flex-end;
     }
   
-    .banner__content.banner__content--bottom-left {
+    .kinda-banner__content.kinda-banner__content--bottom-left {
       align-items: flex-end;
       justify-content: flex-start;
     }
   
-    .banner__content.banner__content--bottom-center {
+    .kinda-banner__content.kinda-banner__content--bottom-center {
       align-items: flex-end;
       justify-content: center;
     }
   
-    .banner__content.banner__content--bottom-right {
+    .kinda-banner__content.kinda-banner__content--bottom-right {
       align-items: flex-end;
       justify-content: flex-end;
     }
   }
   
   @media screen and (max-width: 749px) {
-    .banner:not(.banner--stacked) {
+    .kinda-banner:not(.kinda-banner--stacked) {
       flex-direction: row;
       flex-wrap: wrap;
     }
   
-    .banner--stacked {
+    .kinda-banner--stacked {
       height: auto;
     }
   
-    .banner--stacked .banner__media {
+    .kinda-banner--stacked .kinda-banner__media {
       flex-direction: column;
     }
   }
   
-  .banner__media {
+  .kinda-banner__media {
     height: 100%;
     position: absolute;
     left: 0;
@@ -177,91 +176,91 @@
     width: 100%;
   }
   
-  .banner__media-half {
+  .kinda-banner__media-half {
     width: 50%;
   }
   
-  .banner__media-half + .banner__media-half {
+  .kinda-banner__media-half + .kinda-banner__media-half {
     right: 0;
     left: auto;
   }
   
   @media screen and (max-width: 749px) {
-    .banner--stacked .banner__media-half {
+    .kinda-banner--stacked .kinda-banner__media-half {
       width: 100%;
     }
   
-    .banner--stacked .banner__media-half + .banner__media-half {
+    .kinda-banner--stacked .kinda-banner__media-half + .kinda-banner__media-half {
       order: 1;
     }
   }
   
   @media screen and (min-width: 750px) {
-    .banner__media {
+    .kinda-banner__media {
       height: 100%;
     }
   }
   
-  .banner--adapt,
-  .banner--adapt_image.banner--mobile-bottom .banner__media:not(.placeholder) {
+  .kinda-banner--adapt,
+  .kinda-banner--adapt_image.kinda-banner--mobile-bottom .kinda-banner__media:not(.placeholder) {
     height: auto;
   }
   
   @media screen and (max-width: 749px) {
-    .banner--mobile-bottom .banner__media,
-    .banner--stacked:not(.banner--mobile-bottom) .banner__media {
+    .kinda-banner--mobile-bottom .kinda-banner__media,
+    .kinda-banner--stacked:not(.kinda-banner--mobile-bottom) .kinda-banner__media {
       position: relative;
     }
   
-    .banner--stacked.banner--adapt .banner__content {
+    .kinda-banner--stacked.kinda-banner--adapt .kinda-banner__content {
       height: auto;
     }
   
-    .banner:not(.banner--mobile-bottom):not(.email-signup-banner) .banner__box {
+    .kinda-banner:not(.kinda-banner--mobile-bottom):not(.email-signup-kinda-banner) .kinda-banner__box {
       background: transparent;
       --color-foreground: 255, 255, 255;
       --color-button: 255, 255, 255;
       --color-button-text: 0, 0, 0;
     }
   
-    .banner:not(.banner--mobile-bottom) .banner__box {
+    .kinda-banner:not(.kinda-banner--mobile-bottom) .kinda-banner__box {
       border: none;
       border-radius: 0;
       box-shadow: none;
     }
   
-    .banner:not(.banner--mobile-bottom) .button--secondary {
+    .kinda-banner:not(.kinda-banner--mobile-bottom) .button--secondary {
       --color-button: 255, 255, 255;
       --color-button-text: 255, 255, 255;
       --alpha-button-background: 0;
     }
   
-    .banner--stacked:not(.banner--mobile-bottom):not(.banner--adapt)
-      .banner__content {
+    .kinda-banner--stacked:not(.kinda-banner--mobile-bottom):not(.kinda-banner--adapt)
+      .kinda-banner__content {
       position: absolute;
       height: auto;
     }
   
-    .banner--stacked.banner--adapt:not(.banner--mobile-bottom) .banner__content {
+    .kinda-banner--stacked.kinda-banner--adapt:not(.kinda-banner--mobile-bottom) .kinda-banner__content {
       max-height: 100%;
       overflow: hidden;
       position: absolute;
     }
   
-    .banner--stacked:not(.banner--adapt) .banner__media {
+    .kinda-banner--stacked:not(.kinda-banner--adapt) .kinda-banner__media {
       position: relative;
     }
   
-    .banner::before {
+    .kinda-banner::before {
       display: none !important;
     }
   
-    .banner--stacked .banner__media-image-half {
+    .kinda-banner--stacked .kinda-banner__media-image-half {
       width: 100%;
     }
   }
   
-  .banner__content {
+  .kinda-banner__content {
     padding: 0;
     display: flex;
     position: relative;
@@ -270,72 +269,77 @@
     justify-content: center;
     z-index: 2;
   }
+
+  @media screen and (max-width: 800px) {
+  .kinda-banner__content {
+background-color: var(--color-base-background-3);
+  }}
   
   @media screen and (min-width: 750px) {
-    .banner__content {
+    .kinda-banner__content {
 padding-left: 20rem;
 padding-top: 5rem;
 padding-right: 5rem;
 padding-bottom: 5rem;
 }
   
-    .banner__content--top-left {
+    .kinda-banner__content--top-left {
       align-items: flex-start;
       justify-content: flex-start;
     }
   
-    .banner__content--top-center {
+    .kinda-banner__content--top-center {
       align-items: flex-start;
       justify-content: center;
     }
   
-    .banner__content--top-right {
+    .kinda-banner__content--top-right {
       align-items: flex-start;
       justify-content: flex-end;
     }
   
-    .banner__content--middle-left {
+    .kinda-banner__content--middle-left {
       align-items: center;
       justify-content: flex-start;
     }
   
-    .banner__content--middle-center {
+    .kinda-banner__content--middle-center {
       align-items: center;
       justify-content: center;
     }
   
-    .banner__content--middle-right {
+    .kinda-banner__content--middle-right {
       align-items: center;
       justify-content: flex-end;
     }
   
-    .banner__content--bottom-left {
+    .kinda-banner__content--bottom-left {
       align-items: flex-end;
       justify-content: flex-start;
     }
   
-    .banner__content--bottom-center {
+    .kinda-banner__content--bottom-center {
       align-items: flex-end;
       justify-content: center;
     }
   
-    .banner__content--bottom-right {
+    .kinda-banner__content--bottom-right {
       align-items: flex-end;
       justify-content: flex-end;
     }
   }
   
   @media screen and (max-width: 749px) {
-    .banner--mobile-bottom:not(.banner--stacked) .banner__content {
+    .kinda-banner--mobile-bottom:not(.kinda-banner--stacked) .kinda-banner__content {
       order: 2;
     }
   
-    .banner:not(.banner--mobile-bottom) .field__input {
+    .kinda-banner:not(.kinda-banner--mobile-bottom) .field__input {
       background-color: transparent;
     }
   }
   
-  .banner__box {
+  .kinda-banner__box {
     padding: 4rem 3.5rem;
     position: relative;
     height: fit-content;
@@ -347,7 +351,7 @@ padding-bottom: 5rem;
   }
   
   @media screen and (min-width: 750px) {
-    .banner--desktop-transparent .banner__box {
+    .kinda-banner--desktop-transparent .kinda-banner__box {
       background: transparent;
       --color-foreground: 255, 255, 255;
       --color-button: 255, 255, 255;
@@ -358,26 +362,26 @@ padding-bottom: 5rem;
       box-shadow: none;
     }
   
-    .banner--desktop-transparent .button--secondary {
+    .kinda-banner--desktop-transparent .button--secondary {
       --color-button: 255, 255, 255;
       --color-button-text: 255, 255, 255;
       --alpha-button-background: 0;
     }
   
-    .banner--desktop-transparent .content-container:after {
+    .kinda-banner--desktop-transparent .content-container:after {
       display: none;
     }
   }
   
   @media screen and (max-width: 749px) {
-    .banner--mobile-bottom::after,
-    .banner--mobile-bottom .banner__media::after {
+    .kinda-banner--mobile-bottom::after,
+    .kinda-banner--mobile-bottom .kinda-banner__media::after {
       display: none;
     }
   }
   
-  .banner::after,
-  .banner__media::after {
+  .kinda-banner::after,
+  .kinda-banner__media::after {
     content: '';
     position: absolute;
     top: 0;
@@ -388,32 +392,32 @@ padding-bottom: 5rem;
     height: 100%;
   }
   
-  .banner__box > * + .banner__text {
+  .kinda-banner__box > * + .kinda-banner__text {
     margin-top: 1.5rem;
   }
   
   @media screen and (min-width: 750px) {
-    .banner__box > * + .banner__text {
+    .kinda-banner__box > * + .kinda-banner__text {
       margin-top: 2rem;
     }
   }
   
-  .banner__box > * + * {
+  .kinda-banner__box > * + * {
     margin-top: 1rem;
   }
   
-  .banner__box > *:first-child {
+  .kinda-banner__box > *:first-child {
     margin-top: 0;
   }
   
   @media screen and (max-width: 749px) {
-    .banner--stacked .banner__box {
+    .kinda-banner--stacked .kinda-banner__box {
       width: 100%;
     }
   }
   
   @media screen and (min-width: 750px) {
-    .banner__box {
+    .kinda-banner__box {
       width: auto;
       max-width: 71rem;
       min-width: 45rem;
@@ -421,20 +425,20 @@ padding-bottom: 5rem;
   }
   
   @media screen and (min-width: 1400px) {
-    .banner__box {
+    .kinda-banner__box {
       max-width: 90rem;
     }
   }
   
-  .banner__heading {
+  .kinda-banner__heading {
     margin-bottom: 0;
   }
   
-  .banner__box .banner__heading + * {
+  .kinda-banner__box .kinda-banner__heading + * {
     margin-top: 1rem;
   }
   
-  .banner__buttons {
+  .kinda-banner__buttons {
     display: inline-flex;
     flex-wrap: wrap;
     gap: 1rem;
@@ -443,28 +447,28 @@ padding-bottom: 5rem;
   }
   
   @media screen and (max-width: 749px) {
-    .banner--content-align-mobile-right .banner__buttons--multiple {
+    .kinda-banner--content-align-mobile-right .kinda-banner__buttons--multiple {
       justify-content: flex-end;
     }
   
-    .banner--content-align-mobile-center .banner__buttons--multiple > * {
+    .kinda-banner--content-align-mobile-center .kinda-banner__buttons--multiple > * {
       flex-grow: 1;
       min-width: 22rem;
     }
   }
   
   @media screen and (min-width: 750px) {
-    .banner--content-align-center .banner__buttons--multiple > * {
+    .kinda-banner--content-align-center .kinda-banner__buttons--multiple > * {
       flex-grow: 1;
       min-width: 22rem;
     }
   
-    .banner--content-align-right .banner__buttons--multiple {
+    .kinda-banner--content-align-right .kinda-banner__buttons--multiple {
       justify-content: flex-end;
     }
   }
   
-  .banner__box > * + .banner__buttons {
+  .kinda-banner__box > * + .kinda-banner__buttons {
     margin-top: 2rem;
   }
   
