image banner tweaks and custom background and accent colors working

--- a/sections/kinda-image-banner.liquid
+++ b/sections/kinda-image-banner.liquid
@@ -161,12 +161,12 @@
       {
         "type": "image_picker",
         "id": "image",
-        "label": "t:sections.image-kinda-banner.settings.image.label"
+        "label": "t:sections.image-banner.settings.image.label"
       },
       {
         "type": "image_picker",
         "id": "image_2",
-        "label": "t:sections.image-kinda-banner.settings.image_2.label"
+        "label": "t:sections.image-banner.settings.image_2.label"
       },
       {
         "type": "range",
@@ -175,7 +175,7 @@
         "max": 100,
         "step": 10,
         "unit": "%",
-        "label": "t:sections.image-kinda-banner.settings.image_overlay_opacity.label",
+        "label": "t:sections.image-banner.settings.image_overlay_opacity.label",
         "default": 0
       },
       {
@@ -184,24 +184,24 @@
         "options": [
           {
             "value": "adapt",
-            "label": "t:sections.image-kinda-banner.settings.image_height.options__1.label"
+            "label": "t:sections.image-banner.settings.image_height.options__1.label"
           },
           {
             "value": "small",
-            "label": "t:sections.image-kinda-banner.settings.image_height.options__2.label"
+            "label": "t:sections.image-banner.settings.image_height.options__2.label"
           },
           {
             "value": "medium",
-            "label": "t:sections.image-kinda-banner.settings.image_height.options__3.label"
+            "label": "t:sections.image-banner.settings.image_height.options__3.label"
           },
           {
             "value": "large",
-            "label": "t:sections.image-kinda-banner.settings.image_height.options__4.label"
+            "label": "t:sections.image-banner.settings.image_height.options__4.label"
           }
         ],
         "default": "medium",
-        "label": "t:sections.image-kinda-banner.settings.image_height.label",
-        "info": "t:sections.image-kinda-banner.settings.image_height.info"
+        "label": "t:sections.image-banner.settings.image_height.label",
+        "info": "t:sections.image-banner.settings.image_height.info"
       },
       {
         "type": "select",
@@ -209,49 +209,49 @@
         "options": [
           {
             "value": "top-left",
-            "label": "t:sections.image-kinda-banner.settings.desktop_content_position.options__1.label"
+            "label": "t:sections.image-banner.settings.desktop_content_position.options__1.label"
           },
           {
             "value": "top-center",
-            "label": "t:sections.image-kinda-banner.settings.desktop_content_position.options__2.label"
+            "label": "t:sections.image-banner.settings.desktop_content_position.options__2.label"
           },
           {
             "value": "top-right",
-            "label": "t:sections.image-kinda-banner.settings.desktop_content_position.options__3.label"
+            "label": "t:sections.image-banner.settings.desktop_content_position.options__3.label"
           },
           {
             "value": "middle-left",
-            "label": "t:sections.image-kinda-banner.settings.desktop_content_position.options__4.label"
+            "label": "t:sections.image-banner.settings.desktop_content_position.options__4.label"
           },
           {
             "value": "middle-center",
-            "label": "t:sections.image-kinda-banner.settings.desktop_content_position.options__5.label"
+            "label": "t:sections.image-banner.settings.desktop_content_position.options__5.label"
           },
           {
             "value": "middle-right",
-            "label": "t:sections.image-kinda-banner.settings.desktop_content_position.options__6.label"
+            "label": "t:sections.image-banner.settings.desktop_content_position.options__6.label"
           },
           {
             "value": "bottom-left",
-            "label": "t:sections.image-kinda-banner.settings.desktop_content_position.options__7.label"
+            "label": "t:sections.image-banner.settings.desktop_content_position.options__7.label"
           },
           {
             "value": "bottom-center",
-            "label": "t:sections.image-kinda-banner.settings.desktop_content_position.options__8.label"
+            "label": "t:sections.image-banner.settings.desktop_content_position.options__8.label"
           },
           {
             "value": "bottom-right",
-            "label": "t:sections.image-kinda-banner.settings.desktop_content_position.options__9.label"
+            "label": "t:sections.image-banner.settings.desktop_content_position.options__9.label"
           }
         ],
         "default": "middle-center",
-        "label": "t:sections.image-kinda-banner.settings.desktop_content_position.label"
+        "label": "t:sections.image-banner.settings.desktop_content_position.label"
       },
       {
         "type": "checkbox",
         "id": "show_text_box",
         "default": true,
-        "label": "t:sections.image-kinda-banner.settings.show_text_box.label"
+        "label": "t:sections.image-banner.settings.show_text_box.label"
       },
       {
         "type": "select",
@@ -259,19 +259,19 @@
         "options": [
           {
             "value": "left",
-            "label": "t:sections.image-kinda-banner.settings.desktop_content_alignment.options__1.label"
+            "label": "t:sections.image-banner.settings.desktop_content_alignment.options__1.label"
           },
           {
             "value": "center",
-            "label": "t:sections.image-kinda-banner.settings.desktop_content_alignment.options__2.label"
+            "label": "t:sections.image-banner.settings.desktop_content_alignment.options__2.label"
           },
           {
             "value": "right",
-            "label": "t:sections.image-kinda-banner.settings.desktop_content_alignment.options__3.label"
+            "label": "t:sections.image-banner.settings.desktop_content_alignment.options__3.label"
           }
         ],
         "default": "center",
-        "label": "t:sections.image-kinda-banner.settings.desktop_content_alignment.label"
+        "label": "t:sections.image-banner.settings.desktop_content_alignment.label"
       },
       {
         "type": "select",
@@ -286,6 +286,10 @@
             "label": "t:sections.all.colors.accent_2.label"
           },
           {
+            "value": "accent-3",
+            "label": "Accent 3"
+          },
+          {
             "value": "background-1",
             "label": "t:sections.all.colors.background_1.label"
           },
@@ -294,17 +298,21 @@
             "label": "t:sections.all.colors.background_2.label"
           },
           {
+            "value": "background-3",
+            "label": "Background 3"
+          },
+          {
             "value": "inverse",
             "label": "t:sections.all.colors.inverse.label"
           }
         ],
         "default": "background-1",
         "label": "t:sections.all.colors.label",
-        "info": "t:sections.image-kinda-banner.settings.color_scheme.info"
+        "info": "t:sections.image-banner.settings.color_scheme.info"
       },
       {
         "type": "header",
-        "content": "t:sections.image-kinda-banner.settings.header.content"
+        "content": "t:sections.image-banner.settings.header.content"
       },
       {
         "type": "select",
@@ -312,44 +320,44 @@
         "options": [
           {
             "value": "left",
-            "label": "t:sections.image-kinda-banner.settings.mobile_content_alignment.options__1.label"
+            "label": "t:sections.image-banner.settings.mobile_content_alignment.options__1.label"
           },
           {
             "value": "center",
-            "label": "t:sections.image-kinda-banner.settings.mobile_content_alignment.options__2.label"
+            "label": "t:sections.image-banner.settings.mobile_content_alignment.options__2.label"
           },
           {
             "value": "right",
-            "label": "t:sections.image-kinda-banner.settings.mobile_content_alignment.options__3.label"
+            "label": "t:sections.image-banner.settings.mobile_content_alignment.options__3.label"
           }
         ],
         "default": "center",
-        "label": "t:sections.image-kinda-banner.settings.mobile_content_alignment.label"
+        "label": "t:sections.image-banner.settings.mobile_content_alignment.label"
       },
       {
         "type": "checkbox",
         "id": "stack_images_on_mobile",
         "default": true,
-        "label": "t:sections.image-kinda-banner.settings.stack_images_on_mobile.label"
+        "label": "t:sections.image-banner.settings.stack_images_on_mobile.label"
       },
       {
         "type": "checkbox",
         "id": "show_text_below",
         "default": true,
-        "label": "t:sections.image-kinda-banner.settings.show_text_below.label"
+        "label": "t:sections.image-banner.settings.show_text_below.label"
       }
     ],
     "blocks": [
       {
         "type": "heading",
-        "name": "t:sections.image-kinda-banner.blocks.heading.name",
+        "name": "t:sections.image-banner.blocks.heading.name",
         "limit": 1,
         "settings": [
           {
             "type": "text",
             "id": "heading",
             "default": "Image kinda-banner",
-            "label": "t:sections.image-kinda-banner.blocks.heading.settings.heading.label"
+            "label": "t:sections.image-banner.blocks.heading.settings.heading.label"
           },
           {
             "type": "select",
@@ -375,14 +383,14 @@
       },
       {
         "type": "text",
-        "name": "t:sections.image-kinda-banner.blocks.text.name",
+        "name": "t:sections.image-banner.blocks.text.name",
         "limit": 1,
         "settings": [
           {
             "type": "text",
             "id": "text",
             "default": "Give customers details about the kinda-banner image(s) or content on the template.",
-            "label": "t:sections.image-kinda-banner.blocks.text.settings.text.label"
+            "label": "t:sections.image-banner.blocks.text.settings.text.label"
           },
           {
             "type": "select",
@@ -390,69 +398,69 @@
             "options": [
               {
                 "value": "body",
-                "label": "t:sections.image-kinda-banner.blocks.text.settings.text_style.options__1.label"
+                "label": "t:sections.image-banner.blocks.text.settings.text_style.options__1.label"
               },
               {
                 "value": "subtitle",
-                "label": "t:sections.image-kinda-banner.blocks.text.settings.text_style.options__2.label"
+                "label": "t:sections.image-banner.blocks.text.settings.text_style.options__2.label"
               },
               {
                 "value": "caption-with-letter-spacing",
-                "label": "t:sections.image-kinda-banner.blocks.text.settings.text_style.options__3.label"
+                "label": "t:sections.image-banner.blocks.text.settings.text_style.options__3.label"
               }
             ],
             "default": "body",
-            "label": "t:sections.image-kinda-banner.blocks.text.settings.text_style.label"
+            "label": "t:sections.image-banner.blocks.text.settings.text_style.label"
           }
         ]
       },
       {
         "type": "buttons",
-        "name": "t:sections.image-kinda-banner.blocks.buttons.name",
+        "name": "t:sections.image-banner.blocks.buttons.name",
         "limit": 1,
         "settings": [
           {
             "type": "text",
             "id": "button_label_1",
             "default": "Button label",
-            "label": "t:sections.image-kinda-banner.blocks.buttons.settings.button_label_1.label",
-            "info": "t:sections.image-kinda-banner.blocks.buttons.settings.button_label_1.info"
+            "label": "t:sections.image-banner.blocks.buttons.settings.button_label_1.label",
+            "info": "t:sections.image-banner.blocks.buttons.settings.button_label_1.info"
           },
           {
             "type": "url",
             "id": "button_link_1",
-            "label": "t:sections.image-kinda-banner.blocks.buttons.settings.button_link_1.label"
+            "label": "t:sections.image-banner.blocks.buttons.settings.button_link_1.label"
           },
           {
             "type": "checkbox",
             "id": "button_style_secondary_1",
             "default": false,
-            "label": "t:sections.image-kinda-banner.blocks.buttons.settings.button_style_secondary_1.label"
+            "label": "t:sections.image-banner.blocks.buttons.settings.button_style_secondary_1.label"
           },
           {
             "type": "text",
             "id": "button_label_2",
             "default": "Button label",
-            "label": "t:sections.image-kinda-banner.blocks.buttons.settings.button_label_2.label",
-            "info": "t:sections.image-kinda-banner.blocks.buttons.settings.button_label_2.info"
+            "label": "t:sections.image-banner.blocks.buttons.settings.button_label_2.label",
+            "info": "t:sections.image-banner.blocks.buttons.settings.button_label_2.info"
           },
           {
             "type": "url",
             "id": "button_link_2",
-            "label": "t:sections.image-kinda-banner.blocks.buttons.settings.button_link_2.label"
+            "label": "t:sections.image-banner.blocks.buttons.settings.button_link_2.label"
           },
           {
             "type": "checkbox",
             "id": "button_style_secondary_2",
             "default": false,
-            "label": "t:sections.image-kinda-banner.blocks.buttons.settings.button_style_secondary_2.label"
+            "label": "t:sections.image-banner.blocks.buttons.settings.button_style_secondary_2.label"
           }
         ]
       }
     ],
     "presets": [
       {
-        "name": "t:sections.kinda-image-kinda-banner.presets.name",
+        "name": "t:sections.image-banner.presets.name",
         "blocks": [
           {
             "type": "heading"
