--- a/assets/base.css
+++ b/assets/base.css
@@ -443,11 +443,13 @@ h5,
 .h5 {
   font-family: var(--font-heading-family);
   font-style: var(--font-heading-style);
-  font-weight: var(--font-heading-weight);
+  /* font-weight: var(--font-heading-weight); */
+  font-weight: 900;
   letter-spacing: calc(var(--font-heading-scale) * 0.06rem);
   color: rgb(var(--color-foreground));
   line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
   word-break: break-word;
+  text-transform: uppercase;
 }
 
 .hxl {
