--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -52,6 +52,11 @@
           src: url("../assets/cera-pro-regular.otf") format("opentype"), url("../assets/cera-pro-regular.otf") format("opentype");
         }
 
+        @font-face {
+          font-family: "Cera Pro Black";
+          src: url("../assets/cera-pro-black.otf") format("opentype"), url("../assets/cera-pro-black§.otf") format("opentype");
+        }
+
       /* end custom font */
 
         :root {
@@ -60,7 +65,7 @@
           --font-body-weight: {{ settings.type_body_font.weight }};
           --font-body-weight-bold: {{ settings.type_body_font.weight | plus: 300 | at_most: 1000 }};
 
-          --font-heading-family: Cera Pro Regular, {{ settings.type_header_font.family }}, {{ settings.type_header_font.fallback_families }};
+          --font-heading-family: Cera Pro Black, {{ settings.type_header_font.family }}, {{ settings.type_header_font.fallback_families }};
           --font-heading-style: {{ settings.type_header_font.style }};
           --font-heading-weight: {{ settings.type_header_font.weight }};
 
